@@ -41,9 +41,9 @@ class FeatureSetTest extends BaseTest with Matchers with GherkinParser with Spec
       case Success(spec) => normaliseSpec(spec, unit1.dataRecord)
       case Failure(e) => sys.error(e.toString)
     }
-    feature1.feature.name should be ("About me [1]")
+    feature1.feature.name should be ("About me [1 of 3]")
     feature1.scenarios.length should be (1)
-    feature1.scenarios(0).background.get.name should be ("Input data record 1")
+    feature1.scenarios(0).background.get.name should be ("Input data record 1 of 3")
     feature1.scenarios(0).background.get.description should be (List(s"Input data file: ${dataFile.getPath}"))
     feature1.scenarios(0).background.get.steps(0).toString should be ("""Given my age is "18"""")
     feature1.scenarios(0).background.get.steps(1).toString should be ("""And my gender is "male"""")
@@ -59,9 +59,9 @@ class FeatureSetTest extends BaseTest with Matchers with GherkinParser with Spec
       case Success(spec) => normaliseSpec(spec, unit2.dataRecord)
       case Failure(e) => sys.error(e.toString)
     }
-    feature2.feature.name should be ("About me [2]")
+    feature2.feature.name should be ("About me [2 of 3]")
     feature2.scenarios.length should be (1)
-    feature2.scenarios(0).background.get.name should be ("Input data record 2")
+    feature2.scenarios(0).background.get.name should be ("Input data record 2 of 3")
     feature2.scenarios(0).background.get.description should be (List(s"Input data file: ${dataFile.getPath}"))
     feature2.scenarios(0).background.get.steps(0).toString should be ("""Given my age is "18"""")
     feature2.scenarios(0).background.get.steps(1).toString should be ("""And my gender is "female"""")
@@ -77,9 +77,9 @@ class FeatureSetTest extends BaseTest with Matchers with GherkinParser with Spec
       case Success(spec) => normaliseSpec(spec, unit3.dataRecord)
       case Failure(e) => sys.error(e.toString)
     }
-    feature3.feature.name should be ("About me [3]")
+    feature3.feature.name should be ("About me [3 of 3]")
     feature3.scenarios.length should be (1)
-    feature3.scenarios(0).background.get.name should be ("Input data record 3")
+    feature3.scenarios(0).background.get.name should be ("Input data record 3 of 3")
     feature3.scenarios(0).background.get.description should be (List(s"Input data file: ${dataFile.getPath}"))
     feature3.scenarios(0).background.get.steps(0).toString should be ("""Given my age is "22"""")
     feature3.scenarios(0).background.get.steps(1).toString should be ("""And my gender is "female"""")
