@@ -194,12 +194,12 @@ class SpecNormaliserTest extends BaseTest with Matchers with SpecNormaliser with
         Step(StepKeyword.Then.toString, "I am a ${my age} year old ${my title}"))
       )), Nil, Nil)
     val data = List(("my age", "18"), ("my gender", "male"), ("my title", "Mr"))
-    val dataRecord = new DataRecord(new File("AboutMe.csv"), 1, data)
+    val dataRecord = new DataRecord(new File("AboutMe.csv"), 1, 1, data)
     val result = normaliseSpec(feature, Some(dataRecord))
     result.background should be (None)
-    result.feature.name should be ("About me [1]")
+    result.feature.name should be ("About me [1 of 1]")
     result.scenarios.length should be (1)
-    result.scenarios(0).background.get.name should be (s"${background.name} + Input data record 1")
+    result.scenarios(0).background.get.name should be (s"${background.name} + Input data record 1 of 1")
     result.scenarios(0).background.get.description should be (List("Initialise", "Input data file: AboutMe.csv"))
     result.scenarios(0).background.get.steps.size should be (4)
     result.scenarios(0).background.get.steps(0).toString should be ("""Given my age is "18"""")
@@ -222,12 +222,12 @@ class SpecNormaliserTest extends BaseTest with Matchers with SpecNormaliser with
         Step(StepKeyword.Then.toString, "I am a ${my age} year old ${my title}"))
       )), Nil, Nil)
     val data = List(("my age", "18"), ("my gender", "male"), ("my title", "Mr"))
-    val dataRecord = new DataRecord(new File("AboutMe.csv"), 1, data)
+    val dataRecord = new DataRecord(new File("AboutMe.csv"), 1, 1, data)
     val result = normaliseSpec(feature, Some(dataRecord))
     result.background should be (None)
-    result.feature.name should be ("About me [1]")
+    result.feature.name should be ("About me [1 of 1]")
     result.scenarios.length should be (1)
-    result.scenarios(0).background.get.name should be ("Input data record 1")
+    result.scenarios(0).background.get.name should be ("Input data record 1 of 1")
     result.scenarios(0).background.get.description should be (List("Input data file: AboutMe.csv"))
     result.scenarios(0).background.get.steps.size should be (3)
     result.scenarios(0).background.get.steps(0).toString should be ("""Given my age is "18"""")
