@@ -10,6 +10,8 @@ Jun 12, 2022
   - `gwen.console.log.depth=number` (default is 1)
     - Accepts a number greater than 1 representing the step depth to log to
       - or `infinity` to log all depths
+- Add total CSV record count to record descriptor suffix
+  - examples: `1` becomes `1 of n` where `n` = total number of records)
 
 3.13.6
 ======
